# Gitask

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/scripts/: build_and_publish.sh  check_and_bump.sh  merge_and_release.sh
.github/workflows/: lint-and-security.yml  publish.yml  release.yml
gitask/: __init__.py  __main__.py  commands.py  config.py  gitlab_utils.py  jira_tool.py  jira_utils.py  main.py  project_management_tool.py  utils.py  version_control_tool.py
gitask/config/: config.py  config_utils.py
gitask/pmt/: github_pmt.py  jira_pmt.py  pmt_factory.py  project_management_tool.py
gitask/vcs/: github_vcs.py  gitlab_vcs.py  vcs_factory.py  version_control_tool.py
tests/e2e/: test_cli_help.py  test_configure_and_open_flow.py  test_configure_edge_cases.py  test_done_command_flows.py  test_edge_cases_real_life.py  test_open_command_flows.py  test_start_working_command_flows.py  test_submit_to_review_command_flows.py  test_submit_to_review_flow.py
tests/integration/: test_configure_creates_config_file.py  test_configure_required_and_optional_fields.py  test_move_to_done_updates_ticket.py  test_move_to_in_progress_updates_ticket.py  test_move_to_in_review_creates_pr_and_updates_ticket.py  test_move_to_to_do_updates_ticket.py
tests/unit/: test_commands.py  test_config.py  test_config_utils.py  test_github_pmt.py  test_github_vcs.py  test_gitlab_vcs.py  test_jira_pmt.py  test_main.py  test_pmt_factory.py  test_utils.py
